--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lite-server": "^2.6.1"
   },
   "dependencies": {
+    "awesome": "^0.0.7",
     "bootstrap": "^4.5.2",
+    "font": "^0.0.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
