--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "awesome": "^0.0.7",
     "bootstrap": "^4.5.2",
+    "bootstrap-social": "^5.1.1",
     "font": "^0.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
